--- a/Webstie/style.css
+++ b/Webstie/style.css
@@ -10,6 +10,7 @@
         visibility: hidden;
 }
 
+
 #title {
         white-space: nowrap;
         overflow: hidden;
@@ -21,3 +22,38 @@
         display: none;
 }
 
+
+
+#reng {
+        -webkit-appearance: none;
+        width: 90%;
+        height: 10px;
+        border-radius: 5px;
+        background: #e8e5e5;
+        outline: none;
+        opacity: 0.7;
+        -webkit-transition: .2s;
+        transition: opacity .2s;
+
+}
+
+#reng:hover {
+        opacity: 1;
+}
+
+#reng::-webkit-slider-thumb {
+        -webkit-appearance: none;
+        appearance: none;
+        width: 15px;
+        height: 15px;
+        border-radius: 50%;
+        background: #2874f0;
+        cursor: pointer;
+}
+
+#reng::-moz-range-thumb {
+        width: 25px;
+        height: 25px;
+        background: #2874f0;
+        cursor: pointer;
+}
